--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "tiktok-video-analytics",
   "version": "1.0.0",
   "private": true,
+  "description": "Prototype for analysing TikTok videos via a Next.js + Vercel app.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "openai": "latest"
+    "react-dom": "latest"
   }
 }
