--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tiktok-video-analytics",
   "version": "1.0.0",
   "private": true,
-  "description": "Prototype for analysing TikTok videos via a Next.js + Vercel app.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "openai": "4.58.1"
   }
 }
