--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "tiktok-video-analytics",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "npm@10.8.1",
+  "engines": { "node": ">=18.17 <23" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "next": "14.2.5",
