--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "tiktok-video-analytics",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "npm@10.8.1",
-  "engines": { "node": ">=18.17 <23" },
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "openai": "4.58.1"
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "openai": "^4.58.1"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5"
   }
 }
