--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "openai": "^4.58.1"
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "openai": "4.58.1"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.5"
   }
 }
