--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -15,7 +15,8 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "openai": "4.58.1"
+    "openai": "4.58.1",
+    "@vercel/kv": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "8.57.0",
