--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.3.1",
     "openai": "4.58.1",
     "@vercel/kv": "^1.0.0"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "eslint": "8.57.0",
