--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "tiktok-video-analytics",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": "22.x"
-  },
+  "engines": { "node": "22.x" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,12 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/kv": "^1.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
     "openai": "4.58.1",
-    "@vercel/kv": "^1.0.0"
-    "cheerio": "^1.0.0-rc.12"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "eslint": "8.57.0",
