--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
-    "cheerio": "^1.0.0-rc.12"
+    "@vercel/kv": "^1.0.0"
   }
 }
