--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@vercel/kv": "^1.0.0",
-    "openai": "4.58.1"
+    "@vercel/kv": "^1.0.1",
+    "openai": "4.58.1",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
