--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/kv": "^1.0.1",
     "openai": "4.58.1",
     "cheerio": "^1.0.0-rc.12",
-    "scrapingbee": "^1.7.1"
+    "scrapingbee": "^1.7.1",
+    "@vercel/analytics": "^1.1.0"
   }
 }
