--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-{
-  "name": "tiktok-video-analytics",
-  "private": true,
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@vercel/kv": "^1.0.1",
-    "openai": "4.58.1",
-    "cheerio": "^1.0.0-rc.12",
-    "scrapingbee": "^1.7.1",
-    "@vercel/analytics": "^1.1.0"
-  }
-}
+{  "name": "tiktok-video-analytics",  "version": "1.2.0",  "private": true,  "type": "module",  "scripts": {    "dev": "next dev",    "build": "next build",    "start": "next start",    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",    "format": "prettier --write ."  },  "dependencies": {    "next": "14.2.5",    "react": "18.3.1",    "react-dom": "18.3.1",    "@vercel/kv": "^1.0.1",    "@vercel/analytics": "^1.1.0",    "openai": "4.58.1",    "cheerio": "^1.0.0-rc.12",    "scrapingbee": "^1.7.1",    "axios": "^1.7.7"  },  "devDependencies": {    "eslint": "^8.57.0",    "eslint-config-next": "^14.2.5",    "prettier": "^3.3.3"  }}
