--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,1 @@
-{
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["*"]
-    }
-  }
-}
+{"compilerOptions": { "baseUrl": ".", "paths": { "@/lib/*": ["lib/*"] }}
